<resources>
    <string name="app_name">WhoseFace</string>
	<string name="main_title">欢迎使用</string>
    <string name="main_entry">后台运行</string>
    <string name="main_push">推送设置</string>


    <string name="push_settting_title">推送设置</string>
    <string name="push_setting_push_service">推送服务</string>


    <string name="push_setting_push_description">
        服务器检测到人脸后与名单中的人脸比对，若发现相似的远端服务器会将报警推送给app \n这样，app客户端将在第一时间收到报警，并且显示通知。无论此应用程序是否被开启，或者是否是在前台。\n为了程序能够在后台持续工作，您需要将程序设置为允许后台运行（打开推送服务就可以设置了），
		当然，如果您不想让程序在后台运行或者不想再收到推送，您也可以关闭推送服务。
	</string>
    <string name="push_setting_service_onoff">开/关 推送服务</string>
    <string name="push_setting_open">开启</string>
    <string name="push_setting_close">关闭</string>

    <string name="face_main_title">这是谁？？？</string>

	<string name="face_position_default">位置未知</string>
	<string name="face_phone_default">未知号码</string>
	<string name="face_default_unknown">未知</string>

	<string name="face_small_title">未知人员</string>
	<string name="face_name_default">未知人员</string>
	<string name="face_sex_default">未知性别</string>
	<string name="face_age_default">未知年龄</string>
	<string name="face_group_default">未知组别</string>
	<string name="face_history">历史记录</string>
	<string name="face_description_default">Michael在游戏刚开始的北扬克顿抢劫任务中第一次出现，他是游戏的主角之一，也可以说是最重要的人物，游戏的故事情节大多由Michael展开，Michael在之前是一名职业抢匪但在北扬克顿的抢劫任务中Michael事先与FIB做了一笔交易，从此金盆洗手，同时参与了FIB的证人保护计划（事实上是帮助FIB做一些他们不能及的事），与FIB的探员Dave Norton关系密切（实质是互相利用的关系），Michael在我看来是个悲剧的人物，在别人看来，他的生活充斥着用之不尽的财富，就连Franklin当初刚来到老麦家的时候都说：Jesus，man!You have a good time here.（天哪，你过得真的很好）但谁也不知道老麦心中永远的痛，由于家庭之间的矛盾麦克只能自己一个人在家中喝着闷酒，其实想当一个好父亲，他热爱他的家庭，在游戏中大家也可以发现Michael不止一次的营救自己的家人。</string>

	<string name="info_title">详细记录</string>

    <string name="lorem">
		Lorem ipsum dolor sit amet, consectetur adipiscing elit.
		In mollis est vitae erat laoreet consectetur. Mauris dui mauris,
		dictum vel egestas vel, porta sed ante. Phasellus congue viverra ipsum,
		in elementum arcu ultricies nec.Morbi tincidunt nisl lacinia, placerat nisi eget, luctus tortor.
		Morbi efficitur dictum leo, sit amet volutpat lorem sodales nec. Quisque et erat et turpis fringilla condimentum.
		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris auctor vulputate libero vitae iaculis.
		Curabitur id blandit quam. Praesent massa ante, pulvinar vitae sagittis commodo, scelerisque porttitor eros.
		Mauris suscipit a enim nec congue. Mauris tristique cursus aliquet. Nunc quis hendrerit nunc. Praesent tristique tellus purus,
		a pretium ex gravida id. Cras laoreet malesuada nulla, at bibendum metus ultricies a. Fusce eu ornare arcu. Proin ut molestie est.
		Vestibulum quis vehicula erat. Nam sed tempus nibh. Sed tortor ante, maximus venenatis odio sed, ultricies maximus lectus.
		Aliquam sed volutpat ligula. Integer bibendum, magna ac lacinia suscipit,
		risus libero rutrum justo, sed tempus augue tellus eget est. Curabitur convallis augue nisl,
		id efficitur urna posuere faucibus. Ut sed egestas nulla, eu finibus metus. Nunc a arcu ante.
		Aenean ullamcorper dolor non condimentum congue. Aenean mauris nunc, pellentesque at placerat vitae,
		aliquet quis orci. Curabitur maximus augue ut bibendum sagittis.
	</string>
</resources>
