<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:contentPaddingBottom="@dimen/item_history_vertical_margin"
    app:contentPaddingLeft="@dimen/item_history_vertical_margin"
    app:contentPaddingRight="@dimen/item_history_vertical_margin"
    app:cardCornerRadius="@dimen/item_history_card_radius"
    app:cardElevation="@dimen/item_history_card_elevation"
    android:layout_margin="@dimen/item_history_layout_margin"
    app:cardBackgroundColor="@color/item_bk"
    >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/item_history_time_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/item_history_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/face_position_default"
                android:textColor="@color/textColor"
                android:textSize="12sp"
                android:textStyle="bold"
                />

            <ImageView
                android:id="@+id/item_history_info"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_date_range_black_16dp"
                android:layout_alignParentEnd="true"
                android:scaleType="centerCrop"
                />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_toLeftOf="@id/item_history_info"
                android:layout_marginEnd="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="捕获时间："
                    android:textColor="@color/textColor"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/item_history_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2018-04-26 00:06:36"
                    android:textColor="@color/textColor"
                    android:textSize="12sp"
                    />

            </LinearLayout>



        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                >

                <ImageView
                    android:id="@+id/item_history_face1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:visibility="gone"
                   />
                <android.support.v4.widget.Space
                    android:layout_width="1dp"
                    android:layout_height="match_parent" />

                <ImageView
                    android:id="@+id/item_history_face2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"

                    />


            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="5dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:gravity="left">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/textColor"
                        android:text="相似度："
                        />
                    <TextView
                        android:id="@+id/item_history_similarity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textColor"


                        android:text="80%"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal"
                    android:gravity="left">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/textColor"
                        android:text="姓名："

                        />

                    <TextView
                        android:id="@+id/item_history_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textColor"

                        android:text="@string/face_name_default"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal"
                    android:gravity="left">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/textColor"
                        android:text="年龄："

                        />

                    <TextView
                        android:id="@+id/item_history_age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textColor"
                        android:text="@string/face_age_default"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal"
                    android:gravity="left">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/textColor"
                        android:text="性别："
                        />

                    <TextView
                        android:id="@+id/item_history_sex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textColor"
                        android:text="@string/face_sex_default"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal"
                    android:gravity="left"
                   >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/textColor"
                        android:text="描述："
                        />

                    <TextView
                        android:id="@+id/item_history_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textColor"
                        android:text="@string/face_default_unknown"/>

                </LinearLayout>
            </LinearLayout>





        </LinearLayout>




    </LinearLayout>

</android.support.v7.widget.CardView>